# Model-JS

./: .gitignore  CMakeLists.txt  Parser.cpp  Parser.h  Parser_first_functions.cpp  Parser_first_functions.h  Parser_utils.cpp  Parser_utils.h  RPN.cpp  RPN.h  lexeme.cpp  lexer.cpp  lexer.h  main.cpp  mjs_data_containers.cpp  mjs_data_containers.h  mjs_datatypes.cpp  mjs_datatypes.h  mjs_except.h  proprietary_functions.cpp  proprietary_functions.h
